--- a/src/pc.rc
+++ b/src/pc.rc
@@ -54,8 +54,7 @@ BEGIN
                         MENUITEM "Disc activity indicator", IDM_VID_DISC
                 END
                 MENUITEM SEPARATOR
-                MENUITEM "&Load configuration...", IDM_CONFIG_LOAD
-                MENUITEM "&Save configuration...", IDM_CONFIG_SAVE
+                MENUITEM "&Select configuration...", IDM_CONFIG_SELECT
         END
         POPUP "&Misc"
         BEGIN
@@ -316,4 +315,16 @@ BEGIN
 
     COMBOBOX        IDC_HDTYPE, 7,54,172,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
 
+END
+
+ConfigureSelectionDlg DIALOGEX 0, 0, 200, 150
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Select Configuration"
+FONT 8, "MS Sans Serif"
+BEGIN
+    DEFPUSHBUTTON   "OK",     IDOK,     200-54, 4, 50, 14, WS_TABSTOP
+    DEFPUSHBUTTON   "Cancel", IDCANCEL, 200-54,22, 50, 14, WS_TABSTOP
+    DEFPUSHBUTTON   "New...", IDC_NEW,  200-54,40, 50, 14, WS_TABSTOP
+    
+    LISTBOX                   IDC_LIST, 4,      4,140,142, WS_TABSTOP
 END
