Machine can now be configured from selection dialogue.

--- a/src/pc.rc
+++ b/src/pc.rc
@@ -325,6 +325,8 @@ BEGIN
     DEFPUSHBUTTON   "OK",     IDOK,     200-54, 4, 50, 14, WS_TABSTOP
     DEFPUSHBUTTON   "Cancel", IDCANCEL, 200-54,22, 50, 14, WS_TABSTOP
     DEFPUSHBUTTON   "New...", IDC_NEW,  200-54,40, 50, 14, WS_TABSTOP
+    DEFPUSHBUTTON   "Configuration...", IDC_CONFIG,  200-54,58, 50, 14, WS_TABSTOP
+    DEFPUSHBUTTON   "HDD...", IDC_HDCONF,  200-54,76, 50, 14, WS_TABSTOP
     
     LISTBOX                   IDC_LIST, 4,      4,140,142, WS_TABSTOP
 END
