Tweak configuration manager dialogue.

--- a/src/pc.rc
+++ b/src/pc.rc
@@ -320,8 +320,8 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSM
 CAPTION "PCem Configuration Manager"
 FONT 8, "MS Sans Serif"
 BEGIN
-    DEFPUSHBUTTON   "OK",     IDOK,     200-54, 4, 50, 14, WS_TABSTOP
-    DEFPUSHBUTTON   "Cancel", IDCANCEL, 200-54,22, 50, 14, WS_TABSTOP
+    DEFPUSHBUTTON   "Load",   IDOK,     200-54, 4, 50, 14, WS_TABSTOP
+    DEFPUSHBUTTON   "Quit",   IDCANCEL, 200-54,132,50, 14, WS_TABSTOP
     DEFPUSHBUTTON   "New...", IDC_NEW,  200-54,40, 50, 14, WS_TABSTOP
     DEFPUSHBUTTON   "Configuration...", IDC_CONFIG,  200-54,58, 50, 14, WS_TABSTOP
     DEFPUSHBUTTON   "HDD...", IDC_HDCONF,  200-54,76, 50, 14, WS_TABSTOP
