--- a/src/Makefile.linux32
+++ b/src/Makefile.linux32
@@ -1,7 +1,7 @@
 VPATH = . dosbox resid-fp
 CPP  = g++
 CC   = gcc
-CFLAGS = -O3 -fomit-frame-pointer -msse2 -m32
+CFLAGS = -DPCEM_ALLEGRO -O3 -fomit-frame-pointer -msse2 -m32
 LDFLAGS = -m32
 OBJ = 386.o 386_dynarec.o 386_dynarec_ops.o 808x.o acer386sx.o ali1429.o allegro-gui.o \
 allegro-gui-configure.o allegro-gui-config-sel.o allegro-gui-deviceconfig.o allegro-gui-hdconf.o allegro-joystick.o allegro-keyboard.o allegro-main.o  \
