Added network configuration dialogue.

--- a/src/pc.rc
+++ b/src/pc.rc
@@ -367,6 +367,23 @@ BEGIN
     DEFPUSHBUTTON   "New...", IDC_NEW,  200-54,40, 50, 14, WS_TABSTOP
     DEFPUSHBUTTON   "Configuration...", IDC_CONFIG,  200-54,58, 50, 14, WS_TABSTOP
     DEFPUSHBUTTON   "HDD...", IDC_HDCONF,  200-54,76, 50, 14, WS_TABSTOP
-    
+#ifdef USE_NETWORKING
+    DEFPUSHBUTTON   "Network...",IDC_NETWORK, 200-54,104,50, 14, WS_TABSTOP
+#endif
     LISTBOX                   IDC_LIST, 4,      4,140,142, WS_TABSTOP|WS_VSCROLL
+END
+
+NetworkConfDlg DIALOGEX 0, 0, 400, 80
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Configure Network"
+FONT 8, "MS Sans Serif"
+BEGIN
+    DEFPUSHBUTTON   "OK",IDOK,64,56,50,14, WS_TABSTOP
+    PUSHBUTTON      "Cancel",IDCANCEL,128,56,50,14, WS_TABSTOP
+
+    COMBOBOX        IDC_COMBONETTYPE,62,16,157,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_COMBONETDEVICE,62,36,327,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+
+    LTEXT           "Type :",IDC_STATIC,15,16,40,10
+    LTEXT           "Device :",IDC_STATIC,15,36,34,10
 END
