Add ./configure option to create release build.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -82,3 +82,8 @@ endif
 if !HAS_OFF64T
 pcem_CFLAGS += -Doff64_t=off_t -Dfopen64=fopen -Dfseeko64=fseek -Dftello64=ftell
 endif
+
+if RELEASE_BUILD
+pcem_CFLAGS += -DRELEASE_BUILD
+pcem_CXXFLAGS += -DRELEASE_BUILD
+endif
